force-app/main/default/objects/Inventory__c/fields/Appointment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Outcome__c</fullName>
    <description>This filed will contains Appointment Outcome value</description>
    <label>Appointment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified Lead</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Network Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>