force-app/main/default/objects/Inventory__c/fields/Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Time__c</fullName>
    <label>Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>