force-app/main/default/objects/Inventory__c/fields/Appt_Flag__c.field-meta.xml
<CustomField>
    <fullName>Appt_Flag__c</fullName>
    <formula>IMAGE(CASE( OB_Report__c , 
  &quot;Distributed&quot;, &quot;/img/msg_icons/confirm32.png&quot;,
  &quot;Approved&quot;, &quot;/img/msg_icons/info32.png&quot;, 
  &quot;Needs Verifiction&quot;, &quot;/img/msg_icons/error32.png&quot;,
  &quot;Need A Pro&quot;, &quot;/img/msg_icons/warning32.png&quot;,
&quot;/img/icon/custom51_100/redcross32.png&quot;), &quot;Lead Status Flag&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Flag</label>
    <type>Text</type>
</CustomField>