force-app/main/default/objects/Inventory__c/fields/Appt_Verification__c.field-meta.xml
<CustomField>
    <fullName>Appt_Verification__c</fullName>
    <description>I have completed all Verification steps and Approve or Reject this appointment</description>
    <inlineHelpText>I have completed all Verification steps and Approve or Reject this appointment</inlineHelpText>
    <label>Appt Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Need A Pro</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>No phone or mobile on user address</fullName>
            </value>
            <value>
                <fullName>Please check all Appt Verification boxes</fullName>
            </value>
            <value>
                <fullName>Please Update Owner Field</fullName>
            </value>
            <value>
                <fullName>Please Update Call Disposition Field</fullName>
            </value>
            <value>
                <fullName>Additional Details is unchecked</fullName>
            </value>
            <value>
                <fullName>Agent Name Correct is unchecked</fullName>
            </value>
            <value>
                <fullName>Homeowner is unchecked</fullName>
            </value>
            <value>
                <fullName>Interest Expressed is unchecked</fullName>
            </value>
            <value>
                <fullName>Market Area is unchecked</fullName>
            </value>
            <value>
                <fullName>Time &amp; Date is unchecked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>