force-app/main/default/objects/Inventory__c/fields/Are_you_in_need_of_blinds__c.field-meta.xml
<CustomField>
    <fullName>Are_you_in_need_of_blinds__c</fullName>
    <description>(Blinds/Shutters)</description>
    <inlineHelpText>(Blinds/Shutters)</inlineHelpText>
    <label>Are you in need of blinds?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blinds/Shutters - Blinds - 5 or Below</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Blinds - 6 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>