force-app/main/default/objects/Inventory__c/fields/Are_you_in_need_of_door__c.field-meta.xml
<CustomField>
    <fullName>Are_you_in_need_of_door__c</fullName>
    <description>(Windows/Doors)</description>
    <inlineHelpText>(Windows/Doors)</inlineHelpText>
    <label>Are you in need of door?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows/Doors - Doors - Custom</fullName>
            </value>
            <value>
                <fullName>Windows/Doors - Doors - Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>