force-app/main/default/objects/Inventory__c/fields/Are_you_in_need_of_windows__c.field-meta.xml
<CustomField>
    <fullName>Are_you_in_need_of_windows__c</fullName>
    <description>(Windows/Doors)</description>
    <inlineHelpText>(Windows/Doors)</inlineHelpText>
    <label>Are you in need of windows?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows/Doors - Windows - 5 or Less</fullName>
            </value>
            <value>
                <fullName>Windows/Doors - Windows - 6 or More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>