force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_a_painter__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_a_painter__c</fullName>
    <description>(Painting (Exterior/Interior))</description>
    <inlineHelpText>(Painting (Exterior/Interior))</inlineHelpText>
    <label>Are you looking for a painter?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>