force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_a_plumber__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_a_plumber__c</fullName>
    <description>(Plumber)</description>
    <inlineHelpText>(Plumber)</inlineHelpText>
    <label>Are you looking for a plumber?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>