force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_an_electrician__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_an_electrician__c</fullName>
    <description>(Electrician)</description>
    <inlineHelpText>(Electrician)</inlineHelpText>
    <label>Are you looking for an electrician?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>