force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_an_energy_audit_on_y__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_an_energy_audit_on_y__c</fullName>
    <description>(Energy Audit/Radiant Barrier/Insulation)Are you looking for an energy audit on your home?</description>
    <inlineHelpText>(Energy Audit/Radiant Barrier/Insulation)Are you looking for an energy audit on your home?</inlineHelpText>
    <label>Are you looking for an energy audit on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>