force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_blinds_and_shutters__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_blinds_and_shutters__c</fullName>
    <description>(Blinds/Shutters)</description>
    <inlineHelpText>(Blinds/Shutters)</inlineHelpText>
    <label>Are you looking for blinds and shutters?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>