force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_carpet_or_tile_clean__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_carpet_or_tile_clean__c</fullName>
    <description>(Carpet/Tile Cleaning)Are you looking for carpet or tile cleaning?</description>
    <inlineHelpText>(Carpet/Tile Cleaning)Are you looking for carpet or tile cleaning?</inlineHelpText>
    <label>Are you looking for carpet or tile clean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>