force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_closet_remodeling__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_closet_remodeling__c</fullName>
    <description>(Closet Remodel)</description>
    <inlineHelpText>(Closet Remodel)</inlineHelpText>
    <label>Are you looking for closet remodeling?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>