force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_flooring__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_flooring__c</fullName>
    <description>(Flooring/Carpeting)</description>
    <inlineHelpText>(Flooring/Carpeting)</inlineHelpText>
    <label>Are you looking for flooring?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>