force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_gutters__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_gutters__c</fullName>
    <description>(Gutters)</description>
    <inlineHelpText>(Gutters)</inlineHelpText>
    <label>Are you looking for gutters?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>