force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_home_remodeling__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_home_remodeling__c</fullName>
    <description>(Home Remodeling)</description>
    <inlineHelpText>(Home Remodeling)</inlineHelpText>
    <label>Are you looking for Home Remodeling?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>