force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_lead_detection__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_lead_detection__c</fullName>
    <description>(Plumber)</description>
    <inlineHelpText>(Plumber)</inlineHelpText>
    <label>Are you looking for leak detection?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumber - Leak Detection?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>