force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_Pest_Control__c</fullName>
    <description>(Pest Control)</description>
    <inlineHelpText>(Pest Control)</inlineHelpText>
    <label>Are you looking for Pest Control?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>