force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_roofing__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_roofing__c</fullName>
    <description>(Roofing)</description>
    <inlineHelpText>(Roofing)</inlineHelpText>
    <label>Are you looking for roofing?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>