force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_siding__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_siding__c</fullName>
    <description>(Siding)</description>
    <inlineHelpText>(Siding)</inlineHelpText>
    <label>Are you looking for siding?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>