force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_solar_power__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_solar_power__c</fullName>
    <description>(Solar Power)</description>
    <inlineHelpText>(Solar Power)</inlineHelpText>
    <label>Are you looking for solar power?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>