force-app/main/default/objects/Inventory__c/fields/Are_you_looking_for_windows_doors__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_windows_doors__c</fullName>
    <description>(Windows/Doors)</description>
    <inlineHelpText>(Windows/Doors)</inlineHelpText>
    <label>Are you looking for windows/doors?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>