force-app/main/default/objects/Inventory__c/fields/averageelectricbillInbound__c.field-meta.xml
<CustomField>
    <fullName>averageelectricbillInbound__c</fullName>
    <description>and what would you say is an average electric bill for your home?</description>
    <label>and what would you say is an average ele</label>
    <length>10</length>
    <type>Text</type>
</CustomField>