force-app/main/default/objects/Inventory__c/fields/BackSplash__c.field-meta.xml
<CustomField>
    <fullName>BackSplash__c</fullName>
    <description>Would you also like to Add/Include a BackSplash?</description>
    <label>Would you also like to Add/Include a Bac</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>