force-app/main/default/objects/Inventory__c/fields/Best_Business_Account_name__c.field-meta.xml
<CustomField>
    <fullName>Best_Business_Account_name__c</fullName>
    <formula>IF( ISBLANK( idCPL_Billing_Opportunity__c ) ,  Producing_Opp_Account__c ,  fBilling_Opp_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Business Account name</label>
    <type>Text</type>
</CustomField>