force-app/main/default/objects/Inventory__c/fields/BestnumberSolarInbound__c.field-meta.xml
<CustomField>
    <fullName>BestnumberSolarInbound__c</fullName>
    <description>Alright so just to make sure the best number to reach you on is?</description>
    <label>Alright so just to make sure the best nu</label>
    <length>14</length>
    <type>Text</type>
</CustomField>