force-app/main/default/objects/Inventory__c/fields/BestTimeBlindInbound__c.field-meta.xml
<CustomField>
    <fullName>BestTimeBlindInbound__c</fullName>
    <description>What time works best for you?</description>
    <label>What time works best for you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8-12PM</fullName>
            </value>
            <value>
                <fullName>12-5PM</fullName>
            </value>
            <value>
                <fullName>5-8PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>