force-app/main/default/objects/Inventory__c/fields/BetterTime__c.field-meta.xml
<CustomField>
    <fullName>BetterTime__c</fullName>
    <description>• would 8am-12pm or 12pm-5pm be better?</description>
    <label>would 8am-12pm or 12pm-5pm be better?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8-12PM</fullName>
            </value>
            <value>
                <fullName>12-5PM</fullName>
            </value>
            <value>
                <fullName>5-8PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>