force-app/main/default/objects/Inventory__c/fields/Billing_Created__c.field-meta.xml
<CustomField>
    <fullName>Billing_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Created</label>
    <type>Checkbox</type>
</CustomField>