force-app/main/default/objects/Inventory__c/fields/Billing_Opp_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opp_Email__c</fullName>
    <label>Billing Opp Email</label>
    <type>Email</type>
</CustomField>