force-app/main/default/objects/Inventory__c/fields/Billing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Stage__c</fullName>
    <description>It will hold the details about inventory, it is billable inventory or not.</description>
    <label>Billing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>