force-app/main/default/objects/Inventory__c/fields/Blank_Acct_Fld__c.field-meta.xml
<CustomField>
    <fullName>Blank_Acct_Fld__c</fullName>
    <formula>IF(  ISBLANK(Account__c ) , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Acct Fld</label>
    <type>Checkbox</type>
</CustomField>