force-app/main/default/objects/Inventory__c/fields/Blank_DID_Fld__c.field-meta.xml
<CustomField>
    <fullName>Blank_DID_Fld__c</fullName>
    <formula>IF(  ISBLANK( DID_Name__c  ) , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank DID Fld</label>
    <type>Checkbox</type>
</CustomField>