force-app/main/default/objects/Inventory__c/fields/BlindsorShuttersInbound__c.field-meta.xml
<CustomField>
    <fullName>BlindsorShuttersInbound__c</fullName>
    <description>Are you more interested in Blinds or Shutters?</description>
    <label>Are you more interested in Blinds or Shu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blinds/Shutters - Blinds - 5 or Less.</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Blinds - 6 or More.</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Shutters- 5 or Less.</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters - Shutters- 6 or More.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>