force-app/main/default/objects/Inventory__c/fields/Boberdoo_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Boberdoo Applicable</label>
    <type>Checkbox</type>
</CustomField>