force-app/main/default/objects/Inventory__c/fields/Boberdoo_Applicable_Date__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Applicable_Date__c</fullName>
    <label>Boberdoo Applicable Date</label>
    <type>DateTime</type>
</CustomField>