force-app/main/default/objects/Inventory__c/fields/Boberdoo_Distribution_date__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Distribution_date__c</fullName>
    <description>This field is filled by Boberdoo</description>
    <label>Boberdoo Distribution date</label>
    <type>DateTime</type>
</CustomField>