force-app/main/default/objects/Inventory__c/fields/Boberdoo_Project_Values__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Project_Values__c</fullName>
    <label>Boberdoo Project Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>