force-app/main/default/objects/Inventory__c/fields/BoberdooID__c.field-meta.xml
<CustomField>
    <fullName>BoberdooID__c</fullName>
    <formula>idCPL_Billing_Opportunity__r.Account.BoberdooID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BoberdooID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>