force-app/main/default/objects/Inventory__c/fields/BottledMonthlyExpense__c.field-meta.xml
<CustomField>
    <fullName>BottledMonthlyExpense__c</fullName>
    <description>Bottled water Monthly Expense?</description>
    <label>Bottled water Monthly Expense?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$10.00 - $20.00</fullName>
            </value>
            <value>
                <fullName>$20.00 - $30.00</fullName>
            </value>
            <value>
                <fullName>More than $30.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>