force-app/main/default/objects/Inventory__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>TEXT ( Opportunity__r.Branch__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>