force-app/main/default/objects/Inventory__c/fields/Branch_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Branch_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Lookup</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>