force-app/main/default/objects/Inventory__c/fields/BuysbottledwaterInbound__c.field-meta.xml
<CustomField>
    <fullName>BuysbottledwaterInbound__c</fullName>
    <description>Buys bottled water</description>
    <label>Buys bottled water</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>