force-app/main/default/objects/Inventory__c/fields/CabinetboxesNeeded__c.field-meta.xml
<CustomField>
    <fullName>CabinetboxesNeeded__c</fullName>
    <description>How many Cabinet boxes will you Need to do?</description>
    <label>How many Cabinet boxes will you Need to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5-10 Cabinets.</fullName>
            </value>
            <value>
                <fullName>10-15 Cabinets.</fullName>
            </value>
            <value>
                <fullName>More than 15 Cabinets.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>