force-app/main/default/objects/Inventory__c/fields/CabinetsColor__c.field-meta.xml
<CustomField>
    <fullName>CabinetsColor__c</fullName>
    <description>And would you like Beautiful Wood Cabinets or a Solid Color?</description>
    <label>And would you like Beautiful Wood Cabine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wood Cabinets.</fullName>
            </value>
            <value>
                <fullName>Solid Color Cabinets.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>