force-app/main/default/objects/Inventory__c/fields/Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempts__c</fullName>
    <description>Used to track how many attempts have been made by Confirmers. They declined to use the Activity history Log Call feature.</description>
    <inlineHelpText>Used to track how many attempts have been made by Confirmers. They declined to use the Activity history Log Call feature.</inlineHelpText>
    <label>Call Attempts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>