force-app/main/default/objects/Inventory__c/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Appt Set: IB</fullName>
            </value>
            <value>
                <fullName>Appt Set: OB</fullName>
            </value>
            <value>
                <fullName>Appt set: Project Yes</fullName>
            </value>
            <value>
                <fullName>Appt Set and Inventory Created</fullName>
            </value>
            <value>
                <fullName>Transfer: IB</fullName>
            </value>
            <value>
                <fullName>Transfer: OB</fullName>
            </value>
            <value>
                <fullName>Transfer: Project Yes</fullName>
            </value>
            <value>
                <fullName>Business No Answer</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Call Back Appointment</fullName>
            </value>
            <value>
                <fullName>Delivered to Wrong House</fullName>
            </value>
            <value>
                <fullName>Disposition</fullName>
            </value>
            <value>
                <fullName>Dropped while talking</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Failed Transfer</fullName>
            </value>
            <value>
                <fullName>Hang Up</fullName>
            </value>
            <value>
                <fullName>Lead Returned</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Manager Call</fullName>
            </value>
            <value>
                <fullName>Need a Pro</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>No Email</fullName>
            </value>
            <value>
                <fullName>No Email/Activation</fullName>
            </value>
            <value>
                <fullName>No English</fullName>
            </value>
            <value>
                <fullName>No Gift Box Delivered</fullName>
            </value>
            <value>
                <fullName>No Good</fullName>
            </value>
            <value>
                <fullName>No Home owner</fullName>
            </value>
            <value>
                <fullName>No Network</fullName>
            </value>
            <value>
                <fullName>Not Homeowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>