force-app/main/default/objects/Inventory__c/fields/Call_DT__c.field-meta.xml
<CustomField>
    <fullName>Call_DT__c</fullName>
    <description>The time in which the call was connected to the system.</description>
    <label>Call DT</label>
    <type>DateTime</type>
</CustomField>