force-app/main/default/objects/Inventory__c/fields/Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes__c</fullName>
    <label>Call Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>