force-app/main/default/objects/Inventory__c/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <formula>HYPERLINK(&quot;http://nuhome.brightpattern.com:8080/admin/?cdrId=097FE7CEF89D475AA15B7F30A7300221&amp;stepId=&quot;&amp;interactionStepId__c, &quot;Call Recording&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>