force-app/main/default/objects/Inventory__c/fields/Call_Recording_link__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_link__c</fullName>
    <description>Input a valid link to the call recording</description>
    <inlineHelpText>Input a valid link to the call recording</inlineHelpText>
    <label>Call Recording link</label>
    <type>Url</type>
</CustomField>