force-app/main/default/objects/Inventory__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <description>It would define about Call End Status of Bright Pattern</description>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Success</fullName>
                <default>true</default>
                <label>Transfer Success</label>
            </value>
            <value>
                <fullName>Caller Hung up</fullName>
            </value>
            <value>
                <fullName>Client Hung up</fullName>
            </value>
            <value>
                <fullName>Left Voice Mail</fullName>
            </value>
            <value>
                <fullName>Voice Mail Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>