force-app/main/default/objects/Inventory__c/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <label>Call Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>